--- a/website/templates/website/people.html
+++ b/website/templates/website/people.html
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="container-fluid">
         {% for person in allPeople %}
-            {% if person.is_staff and person.is_active and person|inGroup:"Admin" %}
+            {% if person.is_staff and person.is_active and person|inGroup:{{ADMIN}} %}
                 <div class="row">
                     <div class="col-xs-2">
                         <img src="{{ person.profile.photo.url }}" class="img-responsive img-thumbnail"/>
