--- a/website/templates/website/people.html
+++ b/website/templates/website/people.html
@@ -5,10 +5,10 @@
 {% block body %}
     <div class="container-fluid">
         {% for person in allPeople %}
-            {% if person.is_staff and person.is_active and person|inGroup:{{ADMIN}} %}
+            {% if person.is_staff and person.is_active and person|inGroup:ADMIN %}
                 <div class="row">
                     <div class="col-xs-2">
-                        <img src="{{ person.profile.photo.url }}" class="img-responsive img-thumbnail"/>
+                        <img src="{{ person.profile.photo.url }}" class="img-fluid img-thumbnail"/>
                     </div>
                     <div class="col-xs-8">
                         <h2>{% if person.profile.isDoctor %}{{ person.profile.surname }} {% endif %}{{ person.first_name }} {{ person.last_name }}</h2>
@@ -21,10 +21,10 @@
             {% endif %}
         {% endfor %}
         {% for person in allPeople %}
-            {% if person.is_staff and person.is_active and person|inGroup:"Moderator" %}
+            {% if person.is_staff and person.is_active and person|inGroup:MODERATOR %}
                 <div class="row">
                     <div class="col-xs-2">
-                        <img src="{{ person.profile.photo.url }}" class="img-responsive img-thumbnail"/>
+                        <img src="{{ person.profile.photo.url }}" class="img-fluid img-thumbnail"/>
                     </div>
                     <div class="col-xs-8">
                         <h2>{% if person.profile.isDoctor %}{{ person.profile.surname }} {% endif %}{{ person.first_name }} {{ person.last_name }}</h2>
@@ -37,10 +37,10 @@
             {% endif %}
         {% endfor %}
         {% for person in allPeople %}
-            {% if person.is_staff and person.is_active and person|inGroup:"Retired" %}
+            {% if person.is_staff and person.is_active and person|inGroup:RETIRED %}
                 <div class="row">
                     <div class="col-xs-2">
-                        <img src="{{ person.profile.photo.url }}" class="img-responsive img-thumbnail"/>
+                        <img src="{{ person.profile.photo.url }}" class="img-fluid img-thumbnail"/>
                     </div>
                     <div class="col-xs-8">
                         <h2>{% if person.profile.isDoctor %}{{ person.profile.surname }} {% endif %}{{ person.first_name }} {{ person.last_name }}</h2>
