--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{% block title %}Layout{% endblock %}</title>
 	{% load staticfiles %}
 
@@ -64,7 +66,7 @@
 <body>
 {% block body%}{% endblock %}
 <footer class="footer">
-    <p>Copyright &copy; 2018, Boise State University and Bowling Green State University. All rights reserved.<br/>
+    <p>Copyright © 2018, Boise State University and Bowling Green State University. All rights reserved.<br/>
     This material is based upon work supported by the US National Science Foundation (NSF) under grants CNS-18-23357, CNS-18-23294.<br/>
     Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.</p>
 </footer>
