--- a/website/templates/website/papers.html
+++ b/website/templates/website/papers.html
@@ -18,11 +18,11 @@
             <tbody>
                 {% for paper in allPapers %}
                     <tr>
-                        <td><a href="{% url 'website:paperDetails' paper.id %}">{{ paper.title }}</a></td>
+                        <td>{{ paper.title }}</td>
                         <td>{{ paper.author }}</td>
                         <td>{{ paper.year }}</td>
                         <td>{{ paper.publish }}</td>
-                        <td>{{ paper.link }}</td>
+                        <td><a href="{{ paper.link }}" target="_blank">{{ paper.link }}</a></td>
                     </tr>
                 {% endfor %}
             </tbody>
