--- a/website/templates/website/papers.html
+++ b/website/templates/website/papers.html
@@ -9,8 +9,8 @@
                 <tr>
                     <th>Title</th>
                     <th>Author</th>
-                    <th>Year</th>
-                    <th>Publish</th>
+                    <th>Date</th>
+                    <th>Venue</th>
                     <th>URL</th>
                 </tr>
             </thead>
@@ -20,7 +20,7 @@
                     <tr>
                         <td>{{ paper.title }}</td>
                         <td>{{ paper.author }}</td>
-                        <td>{{ paper.year }}</td>
+                        <td>{{ paper.date }}</td>
                         <td>{{ paper.publish }}</td>
                         <td><a href="{{ paper.link }}" target="_blank">{{ paper.link }}</a></td>
                     </tr>
