--- a/website/templates/website/login.html
+++ b/website/templates/website/login.html
@@ -23,7 +23,7 @@
                     {% include 'website/form.html' %}
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
-                <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                <p><a href="{% url 'password_reset' %}">Forgot Password?</a></p>
             </div>
         </div>
     </div>
