--- a/website/templates/website/reset/passwordResetDone.html
+++ b/website/templates/website/reset/passwordResetDone.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container-fluid">
         <div class="alert alert-default">
-            <p>A password reset link has been sent to the provided email.</p>
+            <p>If an account exists with the email you entered, we've emailed you instructions for setting your password. You should receive the email shortly. If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
         </div>
     </div>
 {% endblock %}
