--- a/website/templates/website/projectSelection.html
+++ b/website/templates/website/projectSelection.html
@@ -6,7 +6,8 @@
             <div class="panel-body">
                 <form class="form-default" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {{ d_form.as_p }}
+                    {{ f_form.as_p }}
                     <button class="btn btn-default" type="submit">Submit</button>
                 </form>
             </div>
