Add add filter MVT

--- a/website/templates/website/projectSelection.html
+++ b/website/templates/website/projectSelection.html
@@ -10,6 +10,8 @@
                     {{ f_form.as_p }}
                     <button class="btn btn-default" type="submit">Submit</button>
                 </form>
+                <br>
+                <a href="{% url 'website:add_filter' %}" class="btn btn-default" value="submit">Add Filter</a>
             </div>
         </div>
     </div>
