--- a/website/templates/website/projectSelection.html
+++ b/website/templates/website/projectSelection.html
@@ -14,6 +14,7 @@
                         </ul>
                     {% endif %}
                     {{ p_form.as_p }}
+                    {{ f_form.as_p }}
                     <button class="btn btn-default" type="submit">Submit</button>
                 </form>
             </div>
