Work example to work with previous logic

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -13,12 +13,12 @@
         }
     </style>
     {% block custom_css %}{% endblock %}
-    <title>Django Library App</title>
+    <title>Project Selection</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Django Library App</a>
+        <a class="navbar-brand" href="#">PACLab</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
