--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -6,15 +6,26 @@
 {% endif %}
 <form class="form-horizontal" method="POST" action="">
     {% csrf_token %}
+<div class="row form-row spacer">
+    <div class="col-2">
+        <label>Selection</label>
+    </div>
+    <div class="col-4">
+        <div class="input-group">
+            {{p_form.as_p}}
+        </div>
+    </div>
+</div>
 {{ formset.management_form }}
 {% for form in formset %}
 <div class="row form-row spacer">
     <div class="col-2">
-        <label>{{form.name.label}}</label>
+        <label>Filter</label>
     </div>
     <div class="col-4">
         <div class="input-group">
-            {{form.name}}
+            {{form.pfilter}}
+            {{form.value}}
             <div class="input-group-append">
                 <button class="btn btn-success add-form-row">+</button>
             </div>
