Add jquery listener that updates text input on dropdown selection

--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -109,6 +109,12 @@ $(document).on('click', '.remove-form-row', function(e){
     deleteForm('form', $(this));
     return false;
 });
+$('select').change(function (){
+    console.log("Hello World!");
+    var text = $("option:selected", this).text();
+    console.log(text);
+    $(this).nextAll('input').first().val("asdf");
+});
 
 </script>
 {% endblock %}
