--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -7,13 +7,7 @@
             <div class="panel-body">
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {% if messages %}
-                        <ul class="messages">
-                            {% for message in messages%}
-                                <li class="{{ message.tags }}">{{ message }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
+                    {% include 'website/messages.html' %}
                     {{ userForm.as_p }}
                     {{ profileForm.as_p }}
                     <button type="submit" class="btn btn-default">Submit</button>
