--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -2,6 +2,7 @@
 {% block title %}Index{% endblock %}
 {% block body %}
     <div class="container">
+        {% include 'website/messages.html' %}
         <div class="row">
             <div class="col-lg-12">
                 <h1>PAClab - a Program Analysis ColLABoratory</h1>
