change btn-default to btn-primary

--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -10,7 +10,7 @@
                     {% include 'website/messages.html' %}
                     {{ userForm.as_p }}
                     {{ profileForm.as_p }}
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
