--- a/website/templates/website/reset/passwordReset.html
+++ b/website/templates/website/reset/passwordReset.html
@@ -15,7 +15,7 @@
                         </ul>
                     {% endif %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
