--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -8,8 +8,8 @@
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% include 'website/messages.html' %}
-                    {{ userForm.as_p }}
-                    {{ profileForm.as_p }}
+                    {% include 'website/form.html' with form=userForm %}
+                    {% include 'website/form.html' with form=profileForm %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
