--- a/website/templates/website/reset/passwordReset.html
+++ b/website/templates/website/reset/passwordReset.html
@@ -7,14 +7,8 @@
             <div class="panel-body">
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {% if messages %}
-                        <ul class="messages">
-                            {% for message in messages%}
-                                <li class="{{ message.tags }}">{{ message }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-                    {{ form.as_p }}
+                    {% include 'website/messages.html' %}
+                    {% include 'website/form.html' with form=form %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
