--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -1,6 +1,62 @@
 {% extends 'website/layout.html' %}
 {% block title %}Edit Profile{% endblock %}
 {% block profileactive %}active{% endblock %}
+{% block script %}
+<script>
+    $(function () {
+        /* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
+        $("#id_photo").change(function () {
+            if (this.files && this.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $("#image").attr("src", e.target.result);
+                    $("#modalCrop").modal("show");
+                }
+                reader.readAsDataURL(this.files[0]);
+            }
+        });
+
+        /* SCRIPTS TO HANDLE THE CROPPER BOX */
+        var $image = $("#image");
+        var cropBoxData;
+        var canvasData;
+        $("#modalCrop").on("shown.bs.modal", function () {
+            $image.cropper({
+                viewMode: 1,
+                aspectRatio: 1/1,
+                minCropBoxWidth: {{ min_width }},
+                minCropBoxHeight: {{ min_height }},
+                ready: function () {
+                    $image.cropper("setCanvasData", canvasData);
+                    $image.cropper("setCropBoxData", cropBoxData);
+                }
+            });
+        }).on("hidden.bs.modal", function () {
+            cropBoxData = $image.cropper("getCropBoxData");
+            canvasData = $image.cropper("getCanvasData");
+            $image.cropper("destroy");
+        });
+
+        $(".js-zoom-in").click(function () {
+            $image.cropper("zoom", 0.1);
+        });
+
+        $(".js-zoom-out").click(function () {
+            $image.cropper("zoom", -0.1);
+        });
+
+        /* SCRIPT TO COLLECT THE DATA AND POST TO THE SERVER */
+        $(".js-crop-and-upload").click(function () {
+            var cropData = $image.cropper("getData");
+            $("#id_x").val(cropData["x"]);
+            $("#id_y").val(cropData["y"]);
+            $("#id_height").val(cropData["height"]);
+            $("#id_width").val(cropData["width"]);
+            //$("#formUpload").submit();
+        });
+    });
+</script>
+{% endblock %}
 {% block body %}
     <div class="container-fluid">
         <div class="panel panel-default">
@@ -12,6 +68,35 @@
                     {% include 'website/form.html' with form=profileForm %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
+            </div>
+        </div>
+
+        <!-- MODAL TO CROP THE IMAGE -->
+        <div class="modal fade" id="modalCrop">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Crop the photo</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="" id="image" style="max-width: 100%;">
+                    </div>
+                    <div class="modal-footer">
+                        <div class="btn-group pull-left" role="group">
+                            <button type="button" class="btn btn-default js-zoom-in">
+                                <span class="glyphicon glyphicon-zoom-in"></span>
+                            </button>
+                            <button type="button" class="btn btn-default js-zoom-out">
+                                <span class="glyphicon glyphicon-zoom-out"></span>
+                            </button>
+                        </div>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
+                        <button type="button" class="btn btn-primary js-crop-and-upload" data-dismiss="modal">Crop Photo</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
