--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -2,7 +2,7 @@
 {% block title %}Edit Profile{% endblock %}
 {% block profileactive %}active{% endblock %}
 {% block script %}
-<script>
+<script type="text/javascript">
     $(function () {
         /* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
         $("#id_photo").change(function () {
